Import of Version 2.5.5 - Better manual. Clean up of language files. Settings for additional attributes and default group. Manually assigned groups for fe-users wont be overwritten.

--- a/pi1/template.html
+++ b/pi1/template.html
@@ -11,7 +11,7 @@
 <h3>###STATUS_HEADER###</h3>
 ###STATUS_MESSAGE###
 
-<form action="###ACTION_URI###" target="_top" method="post">
+<form action="###ACTION_URI###" target="_top" method="post" class="tx_shibbolethauth_pi1">
 	<fieldset>
 	<legend>###LEGEND###</legend>
 	<div>
