Import of Version 2.5.6 - Storage folder for individual groups. Redirect option. Italian language pack. Shibboleth plugin seperated from felogin functionality.

--- a/pi1/template.html
+++ b/pi1/template.html
@@ -34,12 +34,21 @@
 <!--###TEMPLATE_LOGOUT_SUCCESS###-->
 <h3>###STATUS_HEADER###</h3>
 ###STATUS_MESSAGE###
-###SHIBBOLETH_LOGOUT_TEXT###
-###SHIBBOLETH_LOGOUT_LINK###
 <!--###TEMPLATE_LOGOUT_SUCCESS###-->
 
 
 <!--###TEMPLATE_LOGIN_SUCCESS###-->
+<div class="tx_shibbolethauth_pi1_error">
 <h3>###STATUS_HEADER###</h3>
 ###STATUS_MESSAGE###
+</div>
 <!--###TEMPLATE_LOGIN_SUCCESS###-->
+
+<!--###TEMPLATE_LOGIN_ERROR###-->
+<div class="tx_shibbolethauth_pi1_error">
+<h3>###ERROR_HEADER###</h3>
+###ERROR_MESSAGE###
+</div>
+<!--###TEMPLATE_LOGIN_ERROR###-->
+
+
